k8s/service/auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-microservice
spec:
    selector:
        matchLabels:
            app: auth-microservice
    replicas: 1
    template:
        metadata:
            labels:
                app: auth-microservice
        spec:
            containers:
                - name: auth-microservice
                  image: 4energy/auth-service
                  ports:
                      - containerPort: 8082
---
# Define a 'Service' To Expose the application
apiVersion: v1
kind: Service
metadata:
    name: auth-microservice
    labels:
        app: auth-microservice
spec:
    ports:
        - name: http
          port: 8082    # Port inside the cluster
          #targetPort: 8082  # Port exposed to the outside
    selector:
        app: auth-microservice
    type: ClusterIP
