k8s/service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - http:
              paths:
                  - path: /
                    backend:
                        serviceName: auth-microservice
                        servicePort: 8082
